tests/snapshots/options__insta_opt_multiple_flags_layout_and_reverse.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
">                                                                               "
"  2/2                                                                        0/0"
"> a b c                                                                         "
"  d e f                                                                         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
