tests/snapshots/options__insta_opt_multiple_flags_reverse.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
">                                                                               "
"  1/1                                                                        0/0"
">                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
