tests/snapshots/options__insta_opt_multiple_flags_reverse_and_layout.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d e f                                                                         "
"> a b c                                                                         "
"  2/2                                                                        0/0"
">                                                                               "
