tests/snapshots/options__insta_opt_replstr-2.snap
---
source: tests/options.rs
expression: h.buffer_view()
---
"                                        │foo {} a                               "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> a                                     │                                       "
"  1/3                                0/0│                                       "
"> a                                     │                                       "
